@@ -1,11 +1,0 @@
-##*****************************************************************************
-## $Id: Makefile.am,v 1.1 2005-06-15 22:31:39 achu Exp $
-##*****************************************************************************
-## Process this file with automake to produce Makefile.in.
-##*****************************************************************************
-
-noinst_HEADERS = marshall.h
-
-noinst_LTLIBRARIES = libmarshall.la
-
-libmarshall_la_SOURCES = marshall.c
