@@ -1,6 +1,8 @@
 2005-06-16  Albert Chu  <chu11@llnl.gov>
 
 	* Fixed up locking issues.
+
+	* Marshall library cleanup.
 	
 2005-06-15  Albert Chu  <chu11@llnl.gov>
 
